--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,8 +33,13 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.1.3
   fluttertoast: ^8.2.2
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  
 
 dev_dependencies:
+  build_runner: ^2.4.6
+  hive_generator: ^2.0.1
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
