--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   motion_tab_bar_v2: ^0.3.0
+  webview_flutter: ^4.2.3
 
 dev_dependencies:
   build_runner: ^2.4.6
