--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   motion_tab_bar_v2: ^0.3.0
+  open_file: ^3.3.2
+  path_provider: ^2.1.1
   webview_flutter: ^4.2.3
 
 dev_dependencies:
