--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.1.3
   fluttertoast: ^8.2.2
+  font_awesome_flutter: ^10.5.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   motion_tab_bar_v2: ^0.3.0
