--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   font_awesome_flutter: ^10.5.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  image_picker: ^1.0.4
   motion_tab_bar_v2: ^0.3.0
   open_file: ^3.3.2
   path_provider: ^2.1.1
