--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   motion_tab_bar_v2: ^0.3.0
   open_file: ^3.3.2
   path_provider: ^2.1.1
+  url_launcher: ^6.1.14
   webview_flutter: ^4.2.3
 
 dev_dependencies:
