--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,17 +29,15 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cupertino_icons: ^1.0.2
+  file_picker: ^5.5.0
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.3
+  flutter_pdfview: ^1.2.7
   fluttertoast: ^8.2.2
-  font_awesome_flutter: ^10.5.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   image_picker: ^1.0.4
-  motion_tab_bar_v2: ^0.3.0
-  open_file: ^3.3.2
-  path_provider: ^2.1.1
   url_launcher: ^6.1.14
   webview_flutter: ^4.2.3
 
