--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   image_picker: ^1.0.4
+  photo_view: ^0.14.0
+  share_plus: ^7.1.0
   url_launcher: ^6.1.14
   webview_flutter: ^4.2.3
 
