--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,14 +30,17 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+        sdk: flutter
   cupertino_icons: ^1.0.2
-  file_picker: ^5.5.0
+  file_picker: ^5.5.0        
   flutter_bloc: ^8.1.3
   flutter_pdfview: ^1.2.7
   fluttertoast: ^8.2.2
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   image_picker: ^1.0.4
+  intl: ^0.18.0
   photo_view: ^0.14.0
   share_plus: ^7.1.0
   url_launcher: ^6.1.14
@@ -45,11 +48,10 @@ dependencies:
 
 dev_dependencies:
   build_runner: ^2.4.6
-  hive_generator: ^2.0.1
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
- 
+  hive_generator: ^2.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -85,3 +87,5 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+flutter_intl:
+  enabled: true
