--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,8 @@ dependencies:
   flutter_localizations:
         sdk: flutter
   cupertino_icons: ^1.0.2
-  file_picker: ^5.5.0        
+  file_picker: ^5.5.0
+  flutter_launcher_icons: "^0.13.1"        
   flutter_bloc: ^8.1.3
   flutter_pdfview: ^1.2.7
   fluttertoast: ^8.2.2
@@ -52,7 +53,11 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   hive_generator: ^2.0.1
-
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/app_logo.png"
+  min_sdk_android: 21 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 # The following section is specific to Flutter packages.
